@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -484,5 +484,18 @@ inline bool MurmurHash::operator < ( const MurmurHash &other ) const
 }
 
 } // namespace IECore
+
+namespace tbb
+{
+
+/// Implementation of tbb_hasher for MurmurHash, allowing MurmurHash to be used
+/// as a key in tbb::concurrent_hash_map.
+template<>
+inline static size_t tbb_hasher( const IECore::MurmurHash &h )
+{
+	return h.m_h1 ^ h.m_h2;
+}
+
+} // namespace tbb
 
 #endif // IECORE_MURMURHASH_INL
